--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="ratio ratio-16x9 p-0 border border-3 border-success rounded shadow overflow-hidden">
-                    <iframe src="https://www.jadwalsholat.org/adzan/monthly.php?id=79"></iframe>
+                    <iframe src="https://youtu.be/4d1KDoxlR3c"></iframe>
                     <!-- <video muted autoplay="true" loop class="shadow m-0">
                         <source src="https://youtu.be/4d1KDoxlR3c" type="video/mp4">
                         Your browser does not support the video tag.
