--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="ratio ratio-16x9 p-0 border border-3 border-success rounded shadow overflow-hidden">
-                    <iframe src="https://youtu.be/4d1KDoxlR3c"></iframe>
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/4d1KDoxlR3c" title="YouTube video player" frameborder="0" allow="autoplay" allowfullscreen></iframe>
                     <!-- <video muted autoplay="true" loop class="shadow m-0">
-                        <source src="https://youtu.be/4d1KDoxlR3c" type="video/mp4">
+                        <source src="https://www.youtube.com/embed/4d1KDoxlR3c" type="video/mp4">
                         Your browser does not support the video tag.
                     </video> -->
                 </div>
