Edit Organisasi via JSon API

--- a/organisasi.html
+++ b/organisasi.html
@@ -20,202 +20,14 @@
     <section id="tableStruktur" class="container text-center mt-5 mb-3 py-5">
         <h5 class="h5 mb-3 fw-bold text-success">SUSUNAN PENGURUS BADAN TA’MIRUL MASJID TUROBUNNUUR<br>KEL. BULOTADAA TIMUR KEC. SIPATANA KOTA GORONTALO<br>PERIODE 2023 - 2026</h5>
         <div class="d-flex justify-content-center gap-3 mb-3">
-            <div class="card border border-success flex-fill shadow-sm">
-                <div class="card-header shadow-sm bg-success bg-gradient text-light fw-bold text-uppercase h5">Dewan Syuro</div>
-                <div class="card-body d-flex flex-column justify-content-center">
-                    <p class="card-text m-2">Prof. DR. KARTIN LIHAWA, M.Pd (ROIS)</p>
-                    <p class="card-text m-2">Hi. SAMRAN HASAN (WAKIL ROIS)</p>
-                    <p class="card-text m-2">ARIFIN HELINGO (WAKIL ROIS)</p>
-                    <p class="card-text m-2">Hi. HUSNI HELINGO (KATIB)</p>
-                    <p class="card-text m-2">K.H. HELMI PODUNGGE (AHWAN)</p>
-                    <p class="card-text m-2">LURAH BULOTADAA TIMUR (AHWAN)</p>
-                </div>
-            </div>
-            <div class="card border border-success flex-fill shadow-sm">
-                <div class="card-header shadow-sm bg-success bg-gradient text-light fw-bold text-uppercase h5">Dewan Pembina</div>
-                <div class="card-body d-flex flex-column justify-content-center">
-                    <p class="card-text m-2">Ha. RAHMIYATI JAHJA, M.Pd</p>
-                    <p class="card-text m-2">Hi. ABDUL RACHMAN ABUBAKAR BAHMID, Lc., MH</p>
-                </div>
-            </div>
+            <div class="card border border-success flex-fill shadow-sm syuroPembina"></div>
+            <div class="card border border-success flex-fill shadow-sm syuroPembina"></div>
             <div class="card border border-success flex-fill shadow-sm">
                 <div class="card-header shadow-sm bg-success bg-gradient text-light fw-bold text-uppercase h5">Pengurus Harian</div>
-                <div class="card-body d-flex flex-column justify-content-center">
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Ketua</p>
-                        <p class="card-text m-0">Hi. ALWI PODUNGGE, S.IP</p>
-                    </div>
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Wakil Ketua</p>
-                        <p class="card-text m-0">Hi. SUHARTONO, SKM., M.Epid</p>
-                    </div>
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Sekretaris</p>
-                        <p class="card-text m-0">Hi. ABDULLAH N. TUE</p>
-                    </div>
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Wakil Sekretaris</p>
-                        <p class="card-text m-0">HENDRIK IDRUS</p>
-                    </div>
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Bendahara</p>
-                        <p class="card-text m-0">Hi. TONIYANTO KASIM</p>
-                    </div>
-                </div>
+                <div class="card-body d-flex flex-column justify-content-center" id="pengurusHarian"></div>
             </div>
         </div>
-        <div class="d-flex justify-content-center gap-3 flex-wrap mb-3">
-            <div class="card border border-success flex-fill shadow-sm">
-                <div class="card-header shadow-sm bg-success bg-gradient text-light fw-bold text-uppercase h5">Bidang<br>Idarah/Pengelolaan</div>
-                <div class="card-body d-flex flex-column">
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Ketua</p>
-                        <p class="card-text m-0">RASYID GIONTE</p>
-                    </div>
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Anggota</p>
-                        <p class="card-text m-0">Hj. NIKMA MIOLO</p>
-                        <p class="card-text m-0">Hi. ZAENAL SALEH</p>
-                        <p class="card-text m-0">RIDA TOBAMBA</p>
-                        <p class="card-text m-0">MISRAN GANI</p>
-                        <p class="card-text m-0">FATMA LAMANI</p>
-                        <p class="card-text m-0">SUWARNI TOBAMBA</p>
-                        <p class="card-text m-0">RAMLAH HOU</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card border border-success flex-fill shadow-sm">
-                <div class="card-header shadow-sm bg-success bg-gradient text-light fw-bold text-uppercase h5">Bidang<br>Imarah/Pemakmuran</div>
-                <div class="card-body d-flex flex-column">
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Ketua</p>
-                        <p class="card-text m-0">JUFRI KUMBU</p>
-                    </div>
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Anggota</p>
-                        <p class="card-text m-0">SABRIN GANI</p>
-                        <p class="card-text m-0">Hi. FAHMI THALIB</p>
-                        <p class="card-text m-0">ZAINAL MATULU</p>
-                        <p class="card-text m-0">ISMET HELINGO</p>
-                        <p class="card-text m-0">IRFAN LAHMUTU</p>
-                        <p class="card-text m-0">IMRAN TAHIR</p>
-                        <p class="card-text m-0">ZULKIFLI PAHRUN</p>
-                        <p class="card-text m-0">RUSDIANTO KASIM</p>
-                        <p class="card-text m-0">Hi. ARIYANTO LAHMUTU</p>
-                        <p class="card-text m-0">RUSTAM HELINGO</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card border border-success flex-fill shadow-sm">
-                <div class="card-header shadow-sm bg-success bg-gradient text-light fw-bold text-uppercase h5">Bidang<br>Ri'ayah/Pemeliharaan</div>
-                <div class="card-body d-flex flex-column">
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Ketua</p>
-                        <p class="card-text m-0">ZOEHRI TOBAMBA</p>
-                    </div>
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Anggota</p>
-                        <p class="card-text m-0">Hi. HERMAN GOBEL</p>
-                        <p class="card-text m-0">MUHAMMAD TAUFIQ</p>
-                        <p class="card-text m-0">RUSTAM KASIM</p>
-                        <p class="card-text m-0">HERMAN ABDULLAH</p>
-                        <p class="card-text m-0">FAJAR BAKARI</p>
-                        <p class="card-text m-0">SYAMSUDIN HAMUL</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card border border-success flex-fill shadow-sm">
-                <div class="card-header shadow-sm bg-success bg-gradient text-light fw-bold text-uppercase h5">Bidang<br>Humas, Data dan Informasi</div>
-                <div class="card-body d-flex flex-column">
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Ketua</p>
-                        <p class="card-text m-0">HERMAN PODUNGGE</p>
-                    </div>
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Anggota</p>
-                        <p class="card-text m-0">Hi. RONI PODUNGGE</p>
-                        <p class="card-text m-0">SAFRUDIN HARUN, S.Pd.I</p>
-                        <p class="card-text m-0">JABIR LUAWO</p>
-                        <p class="card-text m-0">HELMI SADIQ</p>
-                        <p class="card-text m-0">MELKY GANI</p>
-                        <p class="card-text m-0">ELEN PODUNGGE</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card border border-success flex-fill shadow-sm">
-                <div class="card-header shadow-sm bg-success bg-gradient text-light fw-bold text-uppercase h5">Bidang<br>Pemberdayaan Perempuan dan Anak</div>
-                <div class="card-body d-flex flex-column">
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Ketua</p>
-                        <p class="card-text m-0">Hj. RAMZAH HELINGO</p>
-                    </div>
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Anggota</p>
-                        <p class="card-text m-0">Hj. FARIDA HELINGO</p>
-                        <p class="card-text m-0">LINDA MIOLO</p>
-                        <p class="card-text m-0">FADLUN ABDUL</p>
-                        <p class="card-text m-0">SOFIA PODUNGGE</p>
-                        <p class="card-text m-0">LIAN POU</p>
-                        <p class="card-text m-0">FARADILA MASUDI</p>
-                        <p class="card-text m-0">RISNA MILE</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card border border-success flex-fill shadow-sm">
-                <div class="card-header shadow-sm bg-success bg-gradient text-light fw-bold text-uppercase h5">Bidang<br>Kepemudaan dan Remaja Masjid</div>
-                <div class="card-body d-flex flex-column">
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Ketua</p>
-                        <p class="card-text m-0">Hi. SEPTIAN KADIR</p>
-                    </div>
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Anggota</p>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <p class="card-text m-0">BAGAS SETIAWAN</p>
-                                <p class="card-text m-0">ALFIAN HELINGO</p>
-                                <p class="card-text m-0">ABD. RAHMAN PODUNGGE</p>
-                                <p class="card-text m-0">IDRIS PODUNGGE</p>
-                                <p class="card-text m-0">REZA ALFAREYZA JAHJA</p>
-                                <p class="card-text m-0">NURCHOLIS GANI</p>
-                                <p class="card-text m-0">AHMAD SAYADI HARTANTO</p>
-                                <p class="card-text m-0">APIN TALANI</p>
-                                <p class="card-text m-0">UCUK TOBAMBA</p>
-                                <p class="card-text m-0">RANTOS LAGONA</p>
-                            </div>
-                            <div class="col-md-6">
-                                <p class="card-text m-0">RAMLI RUMAMPUK</p>
-                                <p class="card-text m-0">ALUN</p>
-                                <p class="card-text m-0">WARDJO BOBIHOE</p>
-                                <p class="card-text m-0">JEMY HUSAIN</p>
-                                <p class="card-text m-0">UBAYDILAH HARUN</p>
-                                <p class="card-text m-0">FAHRI PODUNGGE</p>
-                                <p class="card-text m-0">drg. WIRDAYASA OKTAVIANI</p>
-                                <p class="card-text m-0">PRISILIA BAKARI</p>
-                                <p class="card-text m-0">NADIA BASALAMA</p>
-                                <p class="card-text m-0">HUMAIROH HARUN</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card border border-success flex-fill shadow-sm">
-                <div class="card-header shadow-sm bg-success bg-gradient text-light fw-bold text-uppercase h5">Bidang<br>Konsumsi</div>
-                <div class="card-body d-flex flex-column">
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Ketua</p>
-                        <p class="card-text m-0">IMAN B. ANTU</p>
-                    </div>
-                    <div class="m-2">
-                        <p class="fw-bold text-success m-0">Anggota</p>
-                        <p class="card-text m-0">FARID MANOPO</p>
-                        <p class="card-text m-0">HERI ANTU</p>
-                        <p class="card-text m-0">NETI KIDO</p>
-                        <p class="card-text m-0">MERI TIILOLA</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="d-flex justify-content-center gap-3 flex-wrap mb-3" id="bidangBidang"></div>
     </section>
 
     <!-- Runnning Text -->
@@ -233,6 +45,7 @@
         crossorigin="anonymous"></script>
         <script src="script.js"></script>
     <script src="statis.js"></script>
+    <script src="organisasi.js"></script>
 </body>
 
 </html>
