--- a/cetak_jadwal_puasa.html
+++ b/cetak_jadwal_puasa.html
@@ -12,27 +12,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <h5 class="text-center m-0"><strong>UANG KAS MASJID</strong></h5>
-    <h5 class="text-center m-0"><strong>TURABUNNUR SIPATANA</strong></h5>
-    <h6 class="text-center m-0" id="judulPeriode"></h6>
-    <div class="table-responsive container-lg small mt-2 mb-0 p-0">
+<body class="container-lg small">
+    <div class="table-responsive">
+        <table class="table table-borderless" width="100%">
+            <tbody class="border-bottom border-dark">
+                <tr>
+                    <td class="text-center align-middle" width="10%"><img src="assets/images/logo turobunnur sipatana.jpg" alt="Logo" width="75px"></td>
+                    <td class="align-middle">
+                        <h5 class="text-center m-0"><strong>BADAN TA’MIRUL MASJID</strong></h5>
+                        <h3 class="text-center m-0"><strong>“TUROBUNNUURI SIPATANA”</strong></h3>
+                        <small class="d-block text-center small m-0">JL. YUSUF HASIRU KEL. BULOTADAA TIMUR KEC. SIPATANA KOTA GORONTALO</small>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <h6 class="text-center small m-0"><strong>JADWAL BUKA PUASA</strong></h6>
+    <h6 class="text-center small m-0"><strong>BULAN SUCI RAMADHAN</strong></h6>
+    <h6 class="text-center small m-0" id="periodeBukaPuasa"><strong>1445 H / 2024 M</strong></h6>
+    <div class="table-responsive small mt-2 mb-0 p-0">
         <table class="table table-sm table-bordered border-dark small m-0">
             <thead>
                 <tr>
-                    <th class="bg-secondary-subtle text-center align-middle" rowspan="2" width="4%">NO</th>
-                    <th class="bg-secondary-subtle text-center align-middle px-2" rowspan="2" width="25%">TANGGAL</th>
-                    <th class="bg-secondary-subtle text-center align-middle" rowspan="2">URAIAN</th>
-                    <th class="bg-secondary-subtle text-center align-middle" colspan="3">JUMLAH (Rp)</th>
-                </tr>
-                <tr>
-                    <th class="bg-secondary-subtle text-center align-middle" width="13%">MASUK</th>
-                    <th class="bg-secondary-subtle text-center align-middle" width="13%">KELUAR</th>
-                    <th class="bg-secondary-subtle text-center align-middle" width="13%">SALDO</th>
+                    <th class="bg-secondary-subtle text-center align-middle" rowspan="2" width="10%">HARI KE</th>
+                    <th class="bg-secondary-subtle text-center align-middle px-2" rowspan="2" width="20%">TANGGAL</th>
+                    <th class="bg-secondary-subtle text-center align-middle" rowspan="2">NAMA PELAKSANA</th>
                 </tr>
             </thead>
-            <tbody id="tbodyKas"></tbody>
-            <tfoot id="tfootKas"></tfoot>
+            <tbody id="tbodyBukaPuasa"></tbody>
         </table>
     </div>
     <div class="d-flex justify-content-end align-items-center p-0 mt-2 container-lg">
@@ -51,7 +58,7 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
     <script src="script.js"></script>
-    <script src="cetak.js"></script>
+    <script src="cetak_jadwal_puasa.js"></script>
 </body>
 
 </html>
