--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="navMenu"></div>
 
     <!-- Main Cont -->
-    <section class="container mt-5 pt-5">
+    <section class="container my-5 pt-5">
         <div class="row">
             <div class="col-md-6">
                 <div class="ratio ratio-16x9 p-0 border border-3 border-success rounded shadow overflow-hidden">
@@ -69,6 +69,16 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="container mb-5 pb-3">
+        <div class="border border-success p-2 rounded shadow" id="listBukaPuasa"></div>
+
+        <!-- Modal Buka Puasa -->
+        <div class="modal fade" id="modalBukaPuasa" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalBukaPuasaLabel" aria-hidden="true">
+            <div class="modal-dialog modal-fullscreen modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content" id="modalContentBukaPuasa"></div>
             </div>
         </div>
     </section>
