--- a/cetak.html
+++ b/cetak.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BTM Turobunnur Sipatana</title>
+    <title>BTM Turobunnuuri Sipatana</title>
     <link rel="icon" href="assets/images/logo turobunnur sipatana.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -14,7 +14,7 @@
 
 <body>
     <h5 class="text-center m-0"><strong>UANG KAS MASJID</strong></h5>
-    <h5 class="text-center m-0"><strong>TURABUNNUR SIPATANA</strong></h5>
+    <h5 class="text-center m-0"><strong>TURABUNNUURI SIPATANA</strong></h5>
     <h6 class="text-center m-0" id="judulPeriode"></h6>
     <div class="table-responsive container-lg small mt-2 mb-0 p-0">
         <table class="table table-sm table-bordered border-dark small m-0">
@@ -36,8 +36,8 @@
         </table>
     </div>
     <div class="d-flex justify-content-end align-items-center p-0 mt-2 container-lg">
-        <img src="assets/images/logo turobunnur sipatana.jpg" alt="BTM Turobunnur Sipatana" class="rounded-circle me-1" width="25px">
-        <h6 class="h6 m-0">BTM Turobunnur Sipatana</h6>
+        <img src="assets/images/logo turobunnur sipatana.jpg" alt="BTM Turobunnuuri Sipatana" class="rounded-circle me-1" width="25px">
+        <h6 class="h6 m-0">BTM Turobunnuuri Sipatana</h6>
     </div>
 
     <!-- Script -->
