--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BTM Turobunnur Sipatana</title>
+    <title>BTM Turobunnuuri Sipatana</title>
     <link rel="icon" href="assets/images/logo turobunnur sipatana.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -17,9 +17,9 @@
     <div id="navMenu"></div>
 
     <!-- Main Cont -->
-    <section class="container my-5 pt-5">
+    <section class="container mt-5 pt-5">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mb-4">
                 <div class="ratio ratio-16x9 p-0 border border-3 border-success rounded shadow overflow-hidden">
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/4d1KDoxlR3c" title="YouTube video player" frameborder="0" allow="autoplay" allowfullscreen></iframe>
                     <!-- <video muted autoplay="true" loop class="shadow m-0">
@@ -28,14 +28,14 @@
                     </video> -->
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mb-4">
                 <div class="ratio ratio-16x9 p-0 border border-3 border-success rounded shadow overflow-hidden">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="card rounded-0 border border-success">
                                     <div class="card-body bg-success bg-gradient d-flex justify-content-between align-items-center text-light shadow">
-                                        <h5 class="card-title m-0 fw-bold">Jadwal Sholat Gorontalo</h5>
+                                        <h5 class="card-title m-0 fw-bold">Jadwal Sholat Kota Gorontalo</h5>
                                         <p class="card-text tanggalHariIni"></p>
                                     </div>
                                     <ul class="list-group list-group-flush" id="listJadwalSholat"></ul>
@@ -63,7 +63,7 @@
                             </div>
                             <div class="carousel-item">
                                 <div class="ratio ratio-16x9 p-0">
-                                    <img src="assets/images/logo turobunnur sipatana.png" class="img-fluid object-fit-contain" alt="BTM Turobunnur Sipatana">
+                                    <img src="assets/images/logo turobunnur sipatana.png" class="img-fluid object-fit-contain" alt="BTM Turobunnuuri Sipatana">
                                 </div>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
         </div>
     </section>
     <section class="container mb-5 pb-3">
-        <div class="border border-success p-2 rounded shadow" id="listBukaPuasa"></div>
+        <div class="border border-3 border-success p-3 rounded shadow" id="listBukaPuasa"></div>
 
         <!-- Modal Buka Puasa -->
         <div class="modal fade" id="modalBukaPuasa" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalBukaPuasaLabel" aria-hidden="true">
