--- a/kontak.html
+++ b/kontak.html
@@ -18,36 +18,15 @@
 
     <!-- Main Content -->
     <section class="container mt-5 pt-5">
-        <div class="d-flex gap-4 justify-content-center mb-4">
-            <div class="ratio ratio-16x9 w-50">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15958.44948260654!2d123.04899629724561!3d0.5821615405942853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32792c95dd575303%3A0x19332b1aafe88656!2sMasjid%20Turubunnuri!5e0!3m2!1sid!2sid!4v1708206048288!5m2!1sid!2sid" title="Lokasi" allowfullscreen loading="lazy" class="border border-3 border-success rounded shadow"></iframe>
-            </div>
-            <div class="w-50">
-                <form>
-                    <h4 class="h4 ms-2 mb-3 text-success fw-bold">Kirim pertanyaan, kritik dan saran anda!</h4>
-                    <div class="row">
-                        <div class="col">
-                            <div class="form-floating mb-3">
-                                <input type="text" class="form-control border-success shadow-sm" id="namalengkap" placeholder="Nama Lengkap">
-                                <label for="namalengkap">Nama Lengkap</label>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="form-floating mb-3">
-                                <input type="email" class="form-control border-success shadow-sm" id="email" placeholder="nama@email.com">
-                                <label for="email">Alamat Email</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <textarea class="form-control border-success shadow-sm" placeholder="Masukkan pesan" id="pesan"></textarea>
-                        <label for="pesan">Masukkan pesan, kritik dan saran...</label>
-                    </div>
-                    <div class="d-grid gap-2">
-                        <button type="submit" class="btn btn-outline-success bg-gradient btn-block shadow-sm"><i class="bi bi-send me-2"></i>Kirim</button>
-                    </div>
-                </form>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15958.44948260654!2d123.04899629724561!3d0.5821615405942853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32792c95dd575303%3A0x19332b1aafe88656!2sMasjid%20Turubunnuri!5e0!3m2!1sid!2sid!4v1708206048288!5m2!1sid!2sid" title="Lokasi" allowfullscreen loading="lazy" class="border border-3 border-success rounded shadow"></iframe>
+                </div>
                 <ul class="mt-4 small ps-0 mb-0" id="ulKontak"></ul>
+            </div>
+            <div class="col-md-6">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdZDm8ACT5X80rp5gIIGFsKgvRPSrjN2SMlsQqWNlMVvCH75Q/viewform?embedded=true" width="100%" height="100%" class="border border-3 border-success rounded shadow" id="formPesan" frameborder="0">Memuat…</iframe>
             </div>
         </div>
     </section>
