--- a/cetak_jadwal_puasa.html
+++ b/cetak_jadwal_puasa.html
@@ -12,25 +12,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="container-lg small">
-    <div class="table-responsive">
-        <table class="table table-borderless" width="100%">
+<body>
+    <div class="container-lg small table-responsive small m-0 mx-auto p-0">
+        <table class="table table-borderless mb-1" width="100%">
             <tbody class="border-bottom border-dark">
-                <tr>
-                    <td class="text-center align-middle" width="10%"><img src="assets/images/logo turobunnur sipatana.jpg" alt="Logo" width="75px"></td>
-                    <td class="align-middle">
-                        <h5 class="text-center m-0"><strong>BADAN TA’MIRUL MASJID</strong></h5>
-                        <h3 class="text-center m-0"><strong>“TUROBUNNUURI SIPATANA”</strong></h3>
-                        <small class="d-block text-center small m-0">JL. YUSUF HASIRU KEL. BULOTADAA TIMUR KEC. SIPATANA KOTA GORONTALO</small>
-                    </td>
-                </tr>
+                <tr id="kopSurat"></tr>
             </tbody>
         </table>
-    </div>
-    <h6 class="text-center small m-0"><strong>JADWAL BUKA PUASA</strong></h6>
-    <h6 class="text-center small m-0"><strong>BULAN SUCI RAMADHAN</strong></h6>
-    <h6 class="text-center small m-0" id="periodeBukaPuasa"><strong>1445 H / 2024 M</strong></h6>
-    <div class="table-responsive small mt-2 mb-0 p-0">
+        <h6 class="text-center fw-bold small m-0">JADWAL BUKA PUASA</h6>
+        <h6 class="text-center fw-bold small m-0">BULAN SUCI RAMADHAN</h6>
+        <h6 class="text-center fw-bold small m-0 mb-1" id="periodeBukaPuasa"></h6>
         <table class="table table-sm table-bordered border-dark small m-0">
             <thead>
                 <tr>
