--- a/kontak.html
+++ b/kontak.html
@@ -17,17 +17,17 @@
     <div id="navMenu"></div>
 
     <!-- Main Content -->
-    <section class="container mt-5 pt-5">
+    <section class="container my-5 pt-5">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mb-3">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdZDm8ACT5X80rp5gIIGFsKgvRPSrjN2SMlsQqWNlMVvCH75Q/viewform?embedded=true" width="100%" height="100%" class="border border-3 border-success rounded shadow" id="formPesan" frameborder="0">Memuat…</iframe>
+            </div>
+            <div class="col-md-6 mb-3">
                 <div class="ratio ratio-16x9">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15958.44948260654!2d123.04899629724561!3d0.5821615405942853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32792c95dd575303%3A0x19332b1aafe88656!2sMasjid%20Turubunnuri!5e0!3m2!1sid!2sid!4v1708206048288!5m2!1sid!2sid" title="Lokasi" allowfullscreen loading="lazy" class="border border-3 border-success rounded shadow"></iframe>
                 </div>
-                <ul class="mt-4 small ps-0 mb-0" id="ulKontak"></ul>
-            </div>
-            <div class="col-md-6">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdZDm8ACT5X80rp5gIIGFsKgvRPSrjN2SMlsQqWNlMVvCH75Q/viewform?embedded=true" width="100%" height="100%" class="border border-3 border-success rounded shadow" id="formPesan" frameborder="0">Memuat…</iframe>
-            </div>
+                <ul class="mt-3 small ps-0 mb-0" id="ulKontak"></ul>
+            </div> 
         </div>
     </section>
 
