--- a/cetak.html
+++ b/cetak.html
@@ -13,10 +13,14 @@
 </head>
 
 <body>
-    <h5 class="text-center m-0"><strong>UANG KAS MASJID</strong></h5>
-    <h5 class="text-center m-0"><strong>TURABUNNUURI SIPATANA</strong></h5>
-    <h6 class="text-center m-0" id="judulPeriode"></h6>
-    <div class="table-responsive container-lg small mt-2 mb-0 p-0">
+    <div class="table-responsive container-lg small m-0 mx-auto p-0">
+        <table class="table table-borderless mb-1" width="100%">
+            <tbody class="border-bottom border-dark">
+                <tr id="kopSurat"></tr>
+            </tbody>
+        </table>
+        <h6 class="text-center fw-bold small m-0">ARUS KAS MASJID</h6>
+        <h6 class="text-center small m-0 mb-1" id="judulPeriode"></h6>
         <table class="table table-sm table-bordered border-dark small m-0">
             <thead>
                 <tr>
@@ -34,10 +38,10 @@
             <tbody id="tbodyKas"></tbody>
             <tfoot id="tfootKas"></tfoot>
         </table>
-    </div>
-    <div class="d-flex justify-content-end align-items-center p-0 mt-2 container-lg">
-        <img src="assets/images/logo turobunnur sipatana.jpg" alt="BTM Turobunnuuri Sipatana" class="rounded-circle me-1" width="25px">
-        <h6 class="h6 m-0">BTM Turobunnuuri Sipatana</h6>
+        <div class="d-flex justify-content-end align-items-center p-0 mt-2 container-lg">
+            <img src="assets/images/logo turobunnur sipatana.jpg" alt="BTM Turobunnuuri Sipatana" class="rounded-circle me-1" width="25px">
+            <h6 class="h6 m-0">BTM Turobunnuuri Sipatana</h6>
+        </div>
     </div>
 
     <!-- Script -->
