--- a/cetak_pengeluaran.html
+++ b/cetak_pengeluaran.html
@@ -13,10 +13,14 @@
 </head>
 
 <body>
-    <h5 class="text-center m-0 fw-bold" id="judulRincian"></h5>
-    <h5 class="text-center m-0 fw-bold">TUROBUNNUURI SIPATANA</h5>
-    <h6 class="text-center m-0" id="judulPeriode"></h6>
-    <div class="table-responsive container-lg small mt-2 mb-0 p-0">
+    <div class="table-responsive container-lg small m-0 mx-auto p-0">
+        <table class="table table-borderless mb-1" width="100%">
+            <tbody class="border-bottom border-dark">
+                <tr id="kopSurat"></tr>
+            </tbody>
+        </table>
+        <h6 class="text-center fw-bold small m-0" id="judulRincian"></h6>
+        <h6 class="text-center small m-0 mb-1" id="judulPeriode"></h6>
         <table class="table table-sm table-bordered border-dark small m-0">
             <thead>
                 <tr>
