--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <style>
+            ::-webkit-scrollbar {
+                display: none;
+                width: 0px;
+            }
+        </style>
     </head>
     <body>
-        <iframe src="https://turabunnur.web.id/" frameborder="0" class="w-full h-screen"></iframe>
-
-        <!-- Script Start -->
-         <!-- <script src="assets/js/script.js"></script> -->
-        <!-- Script End -->
+        <section style="background-image: url('assets/img/Masjid.png'); background-position: center; background-size: cover;" class="w-full h-screen flex justify-center items-center fixed">
+            <div class="bg-gray-50/90 w-full h-full p-10 flex justify-center items-center">
+                <div class="flex flex-col justify-center items-center gap-4">
+                    <img src="assets/img/logo turobunnur sipatana.png" class="w-52">
+                    <h1 class="text-green-800 font-black text-4xl">BTM TUROBUNNUR SIPATANA</h1>
+                    <span class="text-sm">Jl. Yusuf Hasiru, Kel. Bulotadaa Timur, Kec. Sipatana, Kota Gorontalo, Gorontalo 96121</span>
+                    <div class="mt-10 flex justify-center items-center gap-4">
+                        <a href="kas.html" target="_blank" class="px-8 py-2 bg-green-700 rounded-l-full rounded-r-full text-white hover:bg-green-600 duration-300 hover:shadow-md">Kas Masjid</a>
+                        <a href="https://turabunnur.web.id/home" target="_blank" class="px-8 py-2 bg-white/50 border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md">Dashboard Admin</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
