--- a/index.html
+++ b/index.html
@@ -19,17 +19,37 @@
     </head>
     <body>
         <section style="background-image: url('assets/img/Masjid.png'); background-position: center; background-size: cover;" class="w-full h-screen flex justify-center items-center fixed">
-            <div class="bg-gray-50/90 w-full h-full p-10 flex justify-center items-center">
+            <div class="bg-gray-50/90 w-full h-full p-10 flex justify-center items-center relative">
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="assets/img/logo turobunnur sipatana.png" class="w-52">
                     <h1 class="text-green-800 font-black text-4xl">BTM TUROBUNNUR SIPATANA</h1>
                     <span class="text-sm">Jl. Yusuf Hasiru, Kel. Bulotadaa Timur, Kec. Sipatana, Kota Gorontalo, Gorontalo 96121</span>
                     <div class="mt-10 flex justify-center items-center gap-4">
-                        <a href="kas.html" target="_blank" class="px-8 py-2 bg-green-700 rounded-l-full rounded-r-full text-white hover:bg-green-600 duration-300 hover:shadow-md">Kas Masjid</a>
+                        <span class="px-8 py-2 bg-green-700 rounded-l-full rounded-r-full text-white hover:bg-green-600 duration-300 hover:shadow-md cursor-pointer" id="openKas">Kas Masjid</span>
                         <a href="https://turabunnur.web.id/home" target="_blank" class="px-8 py-2 bg-white/50 border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md">Dashboard Admin</a>
                     </div>
                 </div>
+                <div class="absolute w-full h-full bg-white hidden" id="divKas">
+                    <i class="bi-x-lg absolute p-4 hover:text-red-500 duration-300 cursor-pointer text-gray-300" id="closeKas"></i>
+                    <iframe src="https://turabunnur.web.id/" frameborder="0" class="w-full h-full"></iframe>
+                </div>
             </div>
         </section>
+
+        <!-- Script Start -->
+        <script>
+            const openKas = document.querySelector('#openKas');
+            const divKas = document.querySelector('#divKas');
+            const closeKas = document.querySelector('#closeKas');
+
+            openKas.addEventListener('click', function() {
+                divKas.classList.remove('hidden');
+            });
+
+            closeKas.addEventListener('click', function() {
+                divKas.classList.add('hidden');
+            })
+        </script>
+        <!-- Script End -->
     </body>
 </html>
