--- a/index.html
+++ b/index.html
@@ -19,22 +19,42 @@
     </head>
     <body>
         <section style="background-image: url('assets/img/Masjid.png'); background-position: center; background-size: cover;" class="w-full h-screen flex justify-center items-center fixed">
-            <div class="bg-gray-50/90 w-full h-full p-10 flex justify-center items-center relative">
+            <div class="bg-gray-50/50 w-full h-full p-10 flex justify-center items-center relative">
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="assets/img/logo turobunnur sipatana.png" class="w-52">
                     <h1 class="text-green-800 font-black text-4xl">BTM TUROBUNNUR SIPATANA</h1>
-                    <span class="text-sm">Jl. Yusuf Hasiru, Kel. Bulotadaa Timur, Kec. Sipatana, Kota Gorontalo, Gorontalo 96121</span>
+                    <span class="text-sm font-medium">Jl. Yusuf Hasiru, Kel. Bulotadaa Timur, Kec. Sipatana, Kota Gorontalo, Gorontalo 96121</span>
                     <div class="mt-10 flex justify-center items-center gap-4">
                         <span class="px-8 py-2 bg-green-700 rounded-l-full rounded-r-full text-white hover:bg-green-600 duration-300 hover:shadow-md cursor-pointer" id="openKas">Kas Masjid</span>
-                        <a href="https://turabunnur.web.id/home" target="_blank" class="px-8 py-2 bg-white/50 border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md">Dashboard Admin</a>
+                        <span class="px-8 py-2 bg-white border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md cursor-pointer" id="openRamadhan">Ramadhan 1446 H / 2025 M</span>
+                        <a href="https://turabunnur.web.id/home" target="_blank" class="px-8 py-2 bg-white border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md">Dashboard Admin</a>
                     </div>
-                </div>
-                <div class="absolute w-full h-full bg-white hidden" id="divKas">
-                    <i class="bi-x-lg absolute p-4 hover:text-red-500 duration-300 cursor-pointer text-gray-300" id="closeKas"></i>
-                    <iframe src="https://turabunnur.web.id/" frameborder="0" class="w-full h-full"></iframe>
                 </div>
             </div>
         </section>
+
+        <!-- KAS MASJID START -->
+        <div class="absolute w-full h-full bg-white hidden" id="divKas">
+            <i class="bi-x-lg absolute p-4 hover:text-red-500 duration-300 cursor-pointer text-gray-300" id="closeKas"></i>
+            <iframe src="https://turabunnur.web.id/" frameborder="0" class="w-full h-full"></iframe>
+        </div>
+        <!-- KAS MASJID END -->
+
+        <!-- RAMADHAN START -->
+        <div class="absolute fixed overflow-auto w-full h-full bg-white hidden" id="divRamadhan">
+            <div class="w-full bg-green-700 flex justify-between items-center shadow mb-5">
+                <h1 class="text-white text-xl ms-4 font-bold">Ramadhan 1446 H / 2025 M</h1>
+                <div class="flex justify-center items-center">
+                    <i class="bi-printer text-gray-300 flex justify-center items-center w-10 h-10 cursor-pointer hover:bg-white hover:text-green-700 transition-color duration-300" id="cetakBukaPuasa"></i>
+                    <i class="bi-x-lg text-gray-300 flex justify-center items-center w-10 h-10 cursor-pointer hover:bg-white hover:text-red-500 transition-color duration-300" id="closeRamadhan"></i>    
+                </div>
+            </div>
+            <div class="w-10/12 mx-auto">
+                <h1 class="text-2xl text-center font-bold text-green-800 mb-3 uppercase">Jadwal Buka Puasa</h1>
+                <div id="divBukaPuasa"></div>
+            </div>
+        </div>
+        <!-- RAMADHAN END -->
 
         <!-- Script Start -->
         <script>
@@ -49,6 +69,89 @@
             closeKas.addEventListener('click', function() {
                 divKas.classList.add('hidden');
             })
+
+            // WAKTU HARI INI
+            let waktu = new Date();
+            let hr = waktu.getDay()
+            const namaHari = ['Minggu','Senin','Selasa','Rabu','Kamis','Jumat','Sabtu','Minggu'];
+            let hari = namaHari[hr];
+            let tanggal = waktu.getDate() < 10 ? "0" + waktu.getDate() : waktu.getDate();
+            let bln = waktu.getMonth();
+            const namaBulan = ['Januari','Februari','Maret','April','Mei','Juni','Juli','Agustus','September','Oktober','November','Desember'];
+            let bulan = namaBulan[bln];
+            let tahun = waktu.getFullYear();
+            let tahunHijriah = tahun - 579;
+
+            // Format Tanggal Indonesia
+            function formatTanggal(date){
+                let waktu = new Date(date);
+                let hr = waktu.getDay()
+                const namaHari = ['Minggu','Senin','Selasa','Rabu','Kamis','Jumat','Sabtu','Minggu'];
+                let hari = namaHari[hr];
+                let tgl = waktu.getDate() < 10 ? "0" + waktu.getDate() : waktu.getDate();
+                let bln = waktu.getMonth();
+                const namaBulan = ['Januari','Februari','Maret','April','Mei','Juni','Juli','Agustus','September','Oktober','November','Desember'];
+                let bulan = namaBulan[bln];
+                let thn = waktu.getFullYear();
+
+                return `${hari}, ${tgl} ${bulan} ${thn}`;
+            }
+
+            // UCWORD
+            function ucword(text){
+                return text[0].toUpperCase() + text.substring(1);
+            }
+
+            // Format Angka
+            function angka(number){
+                return number.toLocaleString("id-ID");
+            }
+
+            // Jadwal Buka Puasa
+            const openRamadhan = document.querySelector('#openRamadhan');
+            const divRamadhan = document.querySelector('#divRamadhan');
+            const closeRamadhan = document.querySelector('#closeRamadhan');
+
+            openRamadhan.addEventListener('click', function(){
+                divRamadhan.classList.remove('hidden');
+            })
+
+            closeRamadhan.addEventListener("click", function(){
+                divRamadhan.classList.add('hidden');
+            })
+            
+            async function renderBukaPuasa(th){
+                let responseBukaPuasa = await fetch(`assets/data/${th}.json`);
+                let dataBukaPuasa = await responseBukaPuasa.json();
+                const divBukaPuasa = document.querySelector('#divBukaPuasa');
+                let contentBukaPuasa = "";
+                let warnaTr = "";
+                contentBukaPuasa = `<table class="w-full mb-5">
+                                        <thead>
+                                            <tr>
+                                                <th class="px-2 border border-gray-700 bg-green-700 text-white" width="10%">RAMADHAN HARI KE</th>
+                                                <th class="px-2 border border-gray-700 bg-green-700 text-white" width="20%">TANGGAL</th>
+                                                <th class="px-2 border border-gray-700 bg-green-700 text-white" width="">PELAKSANA</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>`;   
+                dataBukaPuasa.forEach((bp) => {
+                    if(formatTanggal(bp.masehi) == formatTanggal(new Date())){
+                        warnaTr = "bg-green-200 font-bold";
+                    }else{
+                        warnaTr = "";
+                    }
+                    contentBukaPuasa += `<tr class="${warnaTr}">
+                                            <td class="${warnaTr} p-2 border border-gray-700 text-center">${bp.hijriyah < 10 ? '0' + bp.hijriyah : bp.hijriyah}</td>
+                                            <td class="${warnaTr} p-2 border border-gray-700 text-center">${formatTanggal(bp.masehi)}</td>
+                                            <td class="${warnaTr} p-2 border border-gray-700">${bp.nama}</td>
+                                        </tr>`;
+                })
+                contentBukaPuasa += `</tbody>
+                                    </table>`;
+                divBukaPuasa.innerHTML = contentBukaPuasa;
+            }
+            renderBukaPuasa(2025);
         </script>
         <!-- Script End -->
     </body>
