--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </style>
     </head>
     <body>
-        <section style="background-image: url('assets/img/Masjid.png'); background-position: center; background-size: cover;" class="w-full h-screen flex justify-center items-center fixed">
+        <section style="background-image: url('assets/img/Masjid.png'); background-position: center; background-size: cover;" class="w-full h-screen flex justify-center items-center fixed cursor-pointer pointer-even-none">
             <div class="bg-gray-50/50 w-full h-full p-10 flex justify-center items-center relative">
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="assets/img/logo turobunnur sipatana.png" class="w-52">
