--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section style="background-image: url('assets/img/Masjid.png'); background-position: center; background-size: cover;" class="w-full h-screen flex justify-center items-center fixed cursor-default pointer-even-none">
             <div class="bg-gray-50/50 w-full h-full p-10 flex justify-center items-center relative">
                 <div class="flex flex-col justify-center items-center gap-4">
-                    <img src="assets/img/logo turobunnur sipatana.png" class="w-52">
+                    <img src="assets/img/logo turobunnur sipatana.png" class="w-52 pointer-even-none">
                     <h1 class="text-green-800 font-black text-4xl">BTM TUROBUNNUR SIPATANA</h1>
                     <span class="text-sm font-medium">Jl. Yusuf Hasiru, Kel. Bulotadaa Timur, Kec. Sipatana, Kota Gorontalo, Gorontalo 96121</span>
                     <div class="mt-10 flex justify-center items-center gap-4">
