--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- KAS MASJID END -->
 
         <!-- RAMADHAN START -->
-        <div class="absolute fixed overflow-auto w-full h-full bg-white hidden" id="divRamadhan">
+        <div class="absolute fixed overflow-auto w-full h-full bg-white hidden cursor-default pointer-even-none" id="divRamadhan">
             <div class="w-full bg-green-700 flex justify-between items-center shadow mb-5">
                 <h1 class="text-white text-xl ms-4 font-bold">Ramadhan 1446 H / 2025 M</h1>
                 <div class="flex justify-center items-center">
