--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
                 display: none;
                 width: 0px;
             }
+
+            * {
+                /* font-family: 'Poppins', sans-serif; */
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, sans-serif;
+            }
         </style>
     </head>
     <body>
@@ -22,7 +27,7 @@
             <div class="bg-gray-50/50 w-full h-full p-10 flex justify-center items-center relative">
                 <div class="flex flex-col justify-center items-center gap-4">
                     <img src="assets/img/logo turobunnur sipatana.png" class="w-52 pointer-events-none">
-                    <h1 class="text-green-800 font-black text-4xl">BTM TUROBUNNUR SIPATANA</h1>
+                    <h1 class="text-green-800 font-black text-5xl">BTM TUROBUNNUR SIPATANA</h1>
                     <span class="text-sm font-medium">Jl. Yusuf Hasiru, Kel. Bulotadaa Timur, Kec. Sipatana, Kota Gorontalo, Gorontalo 96121</span>
                     <div class="mt-10 flex justify-center items-center gap-4">
                         <span class="px-8 py-2 bg-green-700 rounded-l-full rounded-r-full text-white hover:bg-green-600 duration-300 hover:shadow-md cursor-pointer" id="openKas">Kas Masjid</span>
