--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
     <body>
         <section style="background-image: url('assets/img/Masjid.png'); background-position: center; background-size: cover;" class="w-full h-screen flex justify-center items-center fixed cursor-default">
             <div class="bg-gray-50/50 w-full h-full p-2 flex justify-center items-center relative">
-                <div class="w-8/12 h-full flex flex-col justify-center items-center gap-4 relative">
-                    <img src="assets/img/logo turobunnur sipatana.png" class="w-72 pointer-events-none">
-                    <h1 class="text-green-800 font-black text-5xl">BTM TUROBUNNUR SIPATANA</h1>
-                    <span class="text-base font-bold">Jl. Yusuf Hasiru, Kel. Bulotadaa Timur, Kec. Sipatana, Kota Gorontalo, Gorontalo 96121</span>
-                    <div class="mt-7 flex justify-center items-center gap-4">
-                        <span class="px-8 py-2 bg-green-700 rounded-l-full rounded-r-full text-white hover:bg-green-600 duration-300 hover:shadow-md cursor-pointer" id="openKas">Kas Masjid</span>
-                        <span class="px-8 py-2 bg-white border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md cursor-pointer" id="openRamadhan">Ramadhan 1446 H / 2025 M</span>
-                        <a href="https://turabunnur.web.id/home" target="_blank" class="px-8 py-2 bg-white border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md">Dashboard Admin</a>
+                <div class="w-full sm:w-8/12 h-full flex flex-col justify-center items-center gap-4 relative">
+                    <img src="assets/img/logo turobunnur sipatana.png" class="w-28 sm:w-72 pointer-events-none">
+                    <h1 class="text-green-800 font-black text-lg sm:text-5xl">BTM TUROBUNNUR SIPATANA</h1>
+                    <p class="text-center text-[0.6rem] sm:text-base font-bold">Jln. Yusuf Hasiru, Kel. Bulotadaa Timur, Kec. Sipatana, Kota Gorontalo, Gorontalo 96121</p>
+                    <div class="mt-5 flex justify-center items-center gap-1 sm:gap-4">
+                        <span class="px-2 sm:px-8 py-1 sm:py-2 bg-green-700 rounded-l-full rounded-r-full text-white hover:bg-green-600 duration-300 hover:shadow-md cursor-pointer text-[0.45rem] sm:text-base" id="openKas">Kas Masjid</span>
+                        <span class="px-2 sm:px-8 py-1 sm:py-2 bg-white border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md cursor-pointer text-[0.45rem] sm:text-base" id="openRamadhan">Ramadhan 1446 H / 2025 M</span>
+                        <!-- <a href="https://turabunnur.web.id/home" target="_blank" class="px-2 sm:px-8 py-1 sm:py-2 bg-white border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md text-[0.45rem] sm:text-base">Dashboard Admin</a> -->
                     </div>
-                    <div class="absolute bottom-0 w-full flex gap-10 justify-center items-center text-green-800 font-black text-2xl">
+                    <div class="absolute bottom-0 w-full flex gap-10 justify-between sm:justify-center items-center text-green-800 font-black text-[0.7rem] sm:text-2xl">
                         <span class="tanggalHariIni"></span>
                         <span class="jamBerjalan"></span>
                     </div>
                 </div>
-                <div class="w-4/12 h-full flex flex-col gap-2">
+                <div class="w-4/12 h-full hidden sm:flex flex-col gap-2 ">
                     <div class="flex gap-2">
                         <div class="relative w-6/12 h-fit bg-white/80 rounded-2xl shadow-black/30 shadow-lg overflow-hidden">
                             <div class="w-full text-center p-1">
@@ -68,16 +68,16 @@
         <!-- KAS MASJID END -->
 
         <!-- RAMADHAN START -->
-        <div class="absolute fixed overflow-auto w-full h-full bg-white hidden cursor-default" id="divRamadhan">
+        <div class="absolute fixed overflow-auto w-full h-full hidden bg-white cursor-default" id="divRamadhan">
             <div class="w-full bg-green-700 flex justify-between items-center shadow mb-5">
-                <h1 class="text-white text-xl ms-4 font-bold">Ramadhan 1446 H / 2025 M</h1>
+                <h1 class="text-white text-xs sm:text-xl ms-2 sm:ms-4 font-bold">Ramadhan 1446 H / 2025 M</h1>
                 <div class="flex justify-center items-center">
-                    <i class="bi-printer text-gray-300 flex justify-center items-center w-10 h-10 cursor-pointer hover:bg-white hover:text-green-700 transition-color duration-300" id="cetakBukaPuasa"></i>
-                    <i class="bi-x-lg text-gray-300 flex justify-center items-center w-10 h-10 cursor-pointer hover:bg-white hover:text-red-500 transition-color duration-300" id="closeRamadhan"></i>    
+                    <i class="bi-printer text-gray-300 hidden sm:flex justify-center items-center w-10 h-10 cursor-pointer hover:bg-white hover:text-green-700 transition-color duration-300" id="cetakBukaPuasa"></i>
+                    <i class="bi-x-lg text-gray-300 flex justify-center items-center w-8 sm:w-10 h-8 sm:h-10 text-xs sm:text-base cursor-pointer hover:bg-white hover:text-red-500 transition-color duration-300" id="closeRamadhan"></i>    
                 </div>
             </div>
-            <div class="w-10/12 mx-auto">
-                <h1 class="text-2xl text-center font-bold text-green-800 mb-3 uppercase">Jadwal Buka Puasa</h1>
+            <div class="w-full sm:w-10/12 mx-auto px-2 sm:px-0">
+                <h1 class="text-xs sm:text-2xl text-center font-bold text-green-800 mb-3 uppercase">Jadwal Pelaksana Buka Puasa</h1>
                 <div id="divBukaPuasa"></div>
             </div>
         </div>
