--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <section style="background-image: url('assets/img/Masjid.png'); background-position: center; background-size: cover;" class="w-full h-screen flex justify-center items-center fixed cursor-default">
             <div class="bg-gray-50/50 w-full h-full p-2 flex justify-center items-center relative">
                 <div class="w-full sm:w-8/12 h-full flex flex-col justify-center items-center gap-4 relative">
-                    <img src="assets/img/logo turobunnur sipatana.png" class="w-28 sm:w-72 pointer-events-none">
-                    <h1 class="text-green-800 font-black text-lg sm:text-5xl">BTM TUROBUNNUR SIPATANA</h1>
-                    <p class="text-center text-[0.6rem] sm:text-base font-bold">Jln. Yusuf Hasiru, Kel. Bulotadaa Timur, Kec. Sipatana, Kota Gorontalo, Gorontalo 96121</p>
+                    <img src="assets/img/logo turobunnur sipatana.png" class="w-34 sm:w-72 pointer-events-none">
+                    <h1 class="text-green-800 font-black text-2xl sm:text-5xl">BTM TUROBUNNUR SIPATANA</h1>
+                    <p class="text-center text-[0.8rem] sm:text-base font-bold">Jln. Yusuf Hasiru, Kel. Bulotadaa Timur, Kec. Sipatana, Kota Gorontalo, Gorontalo 96121</p>
                     <div class="mt-5 flex justify-center items-center gap-1 sm:gap-4">
-                        <span class="px-2 sm:px-8 py-1 sm:py-2 bg-green-700 rounded-l-full rounded-r-full text-white hover:bg-green-600 duration-300 hover:shadow-md cursor-pointer text-[0.45rem] sm:text-base" id="openKas">Kas Masjid</span>
-                        <span class="px-2 sm:px-8 py-1 sm:py-2 bg-white border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md cursor-pointer text-[0.45rem] sm:text-base" id="openRamadhan">Ramadhan 1446 H / 2025 M</span>
-                        <!-- <a href="https://turabunnur.web.id/home" target="_blank" class="px-2 sm:px-8 py-1 sm:py-2 bg-white border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md text-[0.45rem] sm:text-base">Dashboard Admin</a> -->
+                        <span class="px-2 sm:px-8 py-1 sm:py-2 bg-green-700 rounded-l-full rounded-r-full text-white hover:bg-green-600 duration-300 hover:shadow-md cursor-pointer text-[0.7rem] sm:text-base" id="openKas">Kas Masjid</span>
+                        <span class="px-2 sm:px-8 py-1 sm:py-2 bg-white border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md cursor-pointer text-[0.7rem] sm:text-base" id="openRamadhan">Ramadhan 1446 H / 2025 M</span>
+                        <!-- <a href="https://turabunnur.web.id/home" target="_blank" class="px-2 sm:px-8 py-1 sm:py-2 bg-white border border-green-700 rounded-l-full rounded-r-full text-green-700 hover:bg-green-100 duration-300 hover:shadow-md text-[0.7rem] sm:text-base">Dashboard Admin</a> -->
                     </div>
-                    <div class="absolute bottom-0 w-full flex gap-10 justify-between sm:justify-center items-center text-green-800 font-black text-[0.7rem] sm:text-2xl">
+                    <div class="absolute bottom-0 w-full flex gap-10 justify-between sm:justify-center items-center text-green-800 font-black text-[0.8rem] sm:text-2xl">
                         <span class="tanggalHariIni"></span>
                         <span class="jamBerjalan"></span>
                     </div>
